# askgpt

./: .gitignore  LICENSE  README.md  ask.py  askgpt.plugin.zsh  pyproject.toml  requirements.txt
askgpt/: __main__.py
tests/: __init__.py  test_ai_session_integration.py  test_config.py  test_main.py  test_session_management.py
