[tool.poetry]
name = "askgpt"
version = "0.1.0"
description = ""
authors = ["steverhall"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
openai = "^1.17.0"

[tool.poetry.scripts]
askgpt = "askgpt.__main__:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
