[tool.poetry]
name = "askgpt"
version = "0.1.0"
description = ""
authors = ["steverhall"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
openai = "^1.17.0"

[tool.poetry.scripts]
askgpt = "askgpt.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
